syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "Shared.proto";
import "RunningWorkflows.Messages.proto";

service RunningWorkflows {
  rpc Register(RegisterRunningWorkflowRequest) returns (google.protobuf.Empty);
  rpc Unregister(UnregisterRunningWorkflowRequest) returns (google.protobuf.Empty);
  rpc Count (CountRunningWorkflowsRequest) returns (CountRunningWorkflowsResponse);
}